--- a/bookings.html
+++ b/bookings.html
@@ -44,7 +44,7 @@
       font-weight: 700;
       color: var(--gold) !important;
     }
-    .nav-link { color: white !important; }
+    .nav-link { color: black !important; }
     .section-title {
       text-align: center;
       margin: 70px 0 30px;
@@ -86,7 +86,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="media/logo.jpg" alt="Logo" width="80" height="80" class="me-2 rounded-circle" />
+        <img src="media/logo.jpg" alt="Logo" width="60" height="60" class="me-2 rounded-circle" />
         Kingdom Life Ministries
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
@@ -97,7 +97,6 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Books</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Give</a></li>
           <li class="nav-item"><a class="nav-link active" href="#">Bookings</a></li>
         </ul>
       </div>
@@ -129,7 +128,6 @@
   <section class="container my-5">
     <h2 class="section-title">6 Months Pre-Marriage Counselling</h2>
     <p class="fs-5">
-      Bayangibuza ukuthi 6 Months Pre-Marriage Counselling kwenziwani? 😄 <br>
       <strong>Our goal:</strong> We want couples to soberly decide if they are ready to commit to marriage, helping to curve divorce rates.
     </p>
     <ul class="fs-5">
