--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     font-weight: 700;
     color: var(--gold) !important;
   }
-  .nav-link { color: white !important; }
+  .nav-link { color: black !important; }
   .hero {
     position: relative;
     height: 100vh;
@@ -130,7 +130,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="media/logo.jpg" alt="Logo" width="80" height="80" class="me-2 rounded-circle" />
+        <img src="media/logo.jpg" alt="Logo" width="60" height="60" class="me-2 rounded-circle" />
         Kingdom Life Ministries
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
@@ -141,7 +141,6 @@
           <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="books.html">Books</a></li>
-          <li class="nav-item"><a class="nav-link" href="give.html">Give</a></li>
           <li class="nav-item"><a class="nav-link" href="bookings.html">Bookings</a></li>
         </ul>
       </div>
@@ -237,24 +236,41 @@
 
 <hr class="divider">
 
-  <!-- Visit KLMI -->
-  <section class="container my-5">
-    <h2 class="section-title text-center">Worship With Us</h2>
-    <div class="row align-items-center">
-      <div class="col-md-6">
-        <img src="media/church building.webp" alt="Church Building" class="img-fluid rounded" />
-      </div>
-      <div class="col-md-6">
-        <p class="fs-5">Join us at Kingdom Life Ministries International in Durban. Services are held weekly:</p>
-        <ul class="list-unstyled fs-5">
-          <li><strong>Sundays:</strong> 09:00 AM – 12:30 PM</li>
-          <li><strong>Thursdays(Effective Prayer Service) & Fridays:</strong> 06:00 PM – 08:00 PM</li>
-        </ul>
-        <p class="fs-5"><strong>Address:</strong> No 100 STALWART SIMELANE STREET (Stanger Street), Durban CBD corner of West street & Stanger street, Durban, South Africa, 4001</p>
-        <p class="fs-5"><strong>Contact Number:</strong> 031 305 0888</p>
-      </div>
+<!-- Visit KLMI -->
+<section class="container my-5">
+  <h2 class="section-title text-center">Worship With Us</h2>
+  <div class="row align-items-center">
+    <div class="col-md-6">
+      <img src="media/church building.webp" alt="Church Building" class="img-fluid rounded" />
     </div>
-  </section>
+    <div class="col-md-6">
+      <p class="fs-5">Join us at Kingdom Life Ministries International in Durban. Services are held weekly:</p>
+      <ul class="list-unstyled fs-5">
+        <li><strong>Sunday Victory Service:</strong> Every Sunday at 09:00 AM – 12:00 PM</li>
+        <li><strong>Effective Prayer Service:</strong> Every Thursday at 06:00 PM – 07:30 PM</li>
+        <li><strong>Youth Service:</strong> Every Friday at 06:00 PM – 07:30 PM</li>
+        <li><strong>Bible Study:</strong> Every Saturday at 08:00 AM – 09:00 AM</li>
+      </ul>
+      <p class="fs-5"><strong>Address:</strong> No 100 STALWART SIMELANE STREET (Stanger Street), Durban CBD corner of West street & Stanger street, Durban, South Africa, 4001</p>
+      <p class="fs-5"><strong>Contact Number:</strong> 031 305 0888</p>
+    </div>
+  </div>
+</section>
+
+<!-- Johannesburg Branch -->
+<section class="container my-5">
+  <h2 class="section-title text-center">Johannesburg Branch</h2>
+  <div class="row">
+    <div class="col-md-12">
+      <ul class="list-unstyled fs-5">
+        <li><strong>Effective Prayer:</strong> Every Wednesday at 06:00 PM – 07:30 PM</li>
+        <li><strong>Sunday Victory Service:</strong> Every Sunday at 09:00 AM – 12:30 PM</li>
+      </ul>
+      <p class="fs-5"><strong>Address:</strong> 31 Bunyan Street, Benoni</p>
+    </div>
+  </div>
+</section>
+
 
 <hr class="divider">
 
@@ -276,6 +292,21 @@
       </div>
     </form>
   </section>
+
+<hr class="divider">
+
+  <!-- Offerings -->
+  <section class="container my-5">
+    <h2 class="section-title text-center">For Love Offering and Tithe</h2>
+      <div class="col-md-6">
+        <ul class="list-unstyled fs-5">
+          <li><strong>Bank Name:</strong> First National Bank(FNB)</li>
+          <li><strong>Account number:</strong> 62804343911</li>
+          <li><strong>Account name:</strong> Kingdom Citizens Ministry</li>
+      </div>
+    </div>
+  </section>
+
 
 <hr class="divider">
 
