--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
       font-weight: 700;
       color: var(--gold) !important;
     }
-    .nav-link { color: white !important; }
+    .nav-link { color: black !important; }
     .hero {
       position: relative;
       height: 60vh;
@@ -106,7 +106,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="media/logo.jpg" alt="Logo" width="80" height="80" class="me-2 rounded-circle" />
+        <img src="media/logo.jpg" alt="Logo" width="60" height="60" class="me-2 rounded-circle" />
         Kingdom Life Ministries
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
@@ -117,7 +117,6 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link active" href="#">About</a></li>
           <li class="nav-item"><a class="nav-link" href="books.html">Books</a></li>
-          <li class="nav-item"><a class="nav-link" href="give.html">Give</a></li>
           <li class="nav-item"><a class="nav-link" href="bookings.html">Bookings</a></li>
         </ul>
       </div>
@@ -144,7 +143,7 @@
       </div>
       <div class="col-md-6">
         <p class="fs-5">
-          Pastor Lungi M, known as Thee Apostle, is a servant of God called to raise Kingdom leaders and transform nations.
+          Apostle Lungi M is a servant of God called to raise Kingdom leaders and transform nations.
           With decades of experience in ministry, coaching, and public speaking, she inspires and empowers individuals
           to live a life of purpose and impact. She is the visionary founder of Kingdom Life Ministries International in Durban,
           South Africa.
@@ -157,15 +156,33 @@
     </div>
   </section>
 
-  <hr class="divider">
+<hr class="divider">
 
-  <!-- Mission & Vision Section -->
-  <section class="container my-5 text-center">
-    <h2 class="section-title">Mission & Vision</h2>
-    <p class="fs-5">Empowering believers to walk in faith, lead with integrity, and impact their communities worldwide.</p>
-    <div class="d-flex justify-content-center gap-3 mt-4">
-      <a href="contact.html" class="btn btn-primary">Contact Pastor Lungi →</a>
-      <a href="https://youtube.com/@pastorlungim3407?si=GWni6dJXaEJRJV8e" class="btn btn-outline-secondary">Explore Teachings →</a>
+  <!-- KLMI Details Section -->
+  <section class="container my-5">
+    <h2 class="section-title text-center">Kingdom Life Ministries International</h2>
+
+    <div class="text-center mb-4">
+      <p class="fs-5"><strong>Founding Scripture:</strong><br>
+        “Be faithful even to the point of death and I will give you the crown of life” (Revelation 2:10b)
+      </p>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <h4 class="text-center text-uppercase text-decoration-underline mb-3">Vision</h4>
+        <p class="fs-5 text-center">To Expand the Kingdom of God</p>
+      </div>
+      <div class="col-md-6">
+        <h4 class="text-center text-uppercase text-decoration-underline mb-3">Mission</h4>
+        <ul class="fs-5">
+          <li>To preach and carry the kingdom mandate to all humankind (Mark 16:15)</li>
+          <li>To teach principles of the kingdom of God (Matthew 6:33)</li>
+          <li>To influence people with the kingdom mentality</li>
+          <li>To ensure that all who have entered the kingdom understand the constitution of our country (John 18:36)</li>
+          <li>To affect all nations with the Kingdom mandate (Matthew 13:3)</li>
+        </ul>
+      </div>
     </div>
   </section>
 
