--- a/about.html
+++ b/about.html
@@ -212,12 +212,29 @@
 
   <hr class="divider">
 
-  <!-- Call to Action -->
-  <section class="container text-center my-5">
-    <h2 class="section-title">Get Involved</h2>
-    <p class="fs-5">Join Pastor Lungi M in her mission to raise Kingdom leaders and transform lives.</p>
-    <a href="#contact" class="btn btn-primary btn-lg">Partner →</a>
-  </section>
+<!-- Watch Sermons -->
+<section class="container my-5">
+  <h2 class="section-title text-center">Watch Sermons</h2>
+  <p class="text-center fs-5">
+    Catch up on the latest Sunday service and be encouraged by the Word. Don’t forget to 
+    <strong>subscribe</strong> to Pastor Lungi M’s YouTube channel for more powerful teachings.
+  </p>
+  <div class="text-center">
+    <a href="https://youtu.be/W_6usOnTnRQ?si=JIw84pSlY-sWWtFK" target="_blank">
+      <img src="https://img.youtube.com/vi/W_6usOnTnRQ/maxresdefault.jpg" 
+           alt="Sunday Service Sermon" 
+           class="img-fluid rounded shadow" 
+           style="max-width: 700px;">
+    </a>
+  </div>
+  <div class="text-center mt-3">
+    <a href="https://youtube.com/@pastorlungim3407?si=GWni6dJXaEJRJV8e" 
+       class="btn btn-danger btn-lg" 
+       target="_blank">
+       <i class="bi bi-youtube"></i> Subscribe on YouTube
+    </a>
+  </div>
+</section>
 
   <hr class="divider">
 
