--- a/bookings.html
+++ b/bookings.html
@@ -96,7 +96,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Books</a></li>
+          <li class="nav-item"><a class="nav-link" href="books.htmls">Books</a></li>
           <li class="nav-item"><a class="nav-link active" href="#">Bookings</a></li>
         </ul>
       </div>
@@ -108,7 +108,6 @@
     <img src="media/placeholder-hero.jpg" alt="Bookings" />
     <div class="content">
       <h1>Book Pastor Lungi M</h1>
-      <p class="lead">Reach out to her team for events, coaching, or pre-marriage counselling sessions.</p>
     </div>
   </section>
 
