--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -151,7 +152,7 @@
 <section class="hero">
   <div class="video-container">
     <video autoplay muted loop>
-      <source src="media/YouTube - Ps Lungi M_ Grace enables me to show up - YouTube 2025-08-21 17-59-05.mp4" type="video/mp4" />
+      <source src="media/Banner video.mp4" type="video/mp4" />
     </video>
     <div class="overlay"></div>
   </div>
@@ -186,8 +187,9 @@
     <p class="fs-5">Explore Pastor Lungi M’s inspiring writings and teachings.</p>
     <img src="media/book.jpg" class="img-fluid mb-3" alt="Book Cover" width="300" />
     <div>
-      <a href="#" class="btn btn-dark me-2">Order Book</a>
-      <a href="#" class="btn btn-outline-secondary">Read Excerpts</a>
+      <a href="books.html" class="btn btn-dark me-2">Order Book</a>
+      <!-- Updated excerpt button -->
+      <a href="media/excerpt.jpg" target="_blank" class="btn btn-outline-secondary">Read Excerpts</a>
     </div>
   </section>
 
@@ -229,7 +231,7 @@
 
   <!-- For bookings button -->
   <div class="mt-5">
-    <a href="#contact" class="btn btn-primary btn-lg">For Bookings →</a>
+    <a href="bookings.html" class="btn btn-primary btn-lg">For Bookings →</a>
   </div>
 </section>
 
@@ -277,20 +279,21 @@
   <!-- Contact -->
   <section class="container">
     <h2 class="section-title text-center">Contact Us</h2>
-    <form class="mx-auto" style="max-width: 600px;" action="https://formsubmit.co/Lungitheapostle@gmail.com" method="POST">
+    <form class="mx-auto" style="max-width: 600px;" onsubmit="sendWhatsAppMessage(event)">
       <div class="mb-3">
-        <input type="text" class="form-control" name="name" placeholder="Name" required />
+        <input type="text" class="form-control" id="name" placeholder="Name" required />
       </div>
       <div class="mb-3">
-        <input type="email" class="form-control" name="email" placeholder="Email" required />
+        <input type="email" class="form-control" id="email" placeholder="Email" required />
       </div>
       <div class="mb-3">
-        <textarea class="form-control" name="message" placeholder="Message" rows="4" required></textarea>
+        <textarea class="form-control" id="message" placeholder="Message" rows="4" required></textarea>
       </div>
       <div class="text-center">
-        <button type="submit" class="btn btn-success">Submit</button>
+        <button type="submit" class="btn btn-success">Submit via WhatsApp</button>
       </div>
     </form>
+    <p class="text-center mt-3">Alternatively, feel free to call our office on <strong>031 305 0888</strong></p>
   </section>
 
 <hr class="divider">
@@ -330,5 +333,19 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- WhatsApp Script -->
+  <script>
+    function sendWhatsAppMessage(event) {
+      event.preventDefault();
+      const name = document.getElementById("name").value;
+      const email = document.getElementById("email").value;
+      const message = document.getElementById("message").value;
+      const phone = "27795874974"; // Country code + number
+      const url = `https://wa.me/${phone}?text=Hello, my name is ${encodeURIComponent(name)} (${encodeURIComponent(email)}). ${encodeURIComponent(message)}`;
+      window.open(url, "_blank");
+    }
+  </script>
 </body>
 </html>
+```
