--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
   <style>
     :root {
-      --gold: #D4AF37;
+      --purple: #6A0DAD;
       --light-bg: #f8f9fa;
       --white: #fff;
       --text-gray: #333;
@@ -42,7 +42,7 @@
     }
     .navbar-brand {
       font-weight: 700;
-      color: var(--gold) !important;
+      color: var(--purple) !important;
     }
     .nav-link { color: black !important; }
     .hero {
@@ -61,30 +61,30 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      color: var(--gold);
+      color: var(--purple);
       text-align: center;
       z-index: 2;
     }
     .section-title {
       text-align: center;
       margin: 70px 0 30px;
-      color: var(--gold);
+      color: var(--purple);
     }
     .btn {
       border-radius: 30px;
       padding: 10px 25px;
     }
     .btn-primary {
-      background-color: var(--gold);
+      background-color: var(--purple);
       border: none;
       color: #000;
     }
     .btn-outline-secondary {
-      border: 1px solid var(--gold);
+      border: 1px solid var(--purple);
       color: var(--gold);
     }
     .btn-outline-secondary:hover {
-      background-color: var(--gold);
+      background-color: var(--purple);
       color: #000;
     }
     footer {
@@ -143,10 +143,11 @@
       </div>
       <div class="col-md-6">
         <p class="fs-5">
-          Apostle Lungi M is a servant of God called to raise Kingdom leaders and transform nations.
-          With decades of experience in ministry, coaching, and public speaking, she inspires and empowers individuals
-          to live a life of purpose and impact. She is the visionary founder of Kingdom Life Ministries International in Durban,
-          South Africa.
+          Apostle Lungi M. Magwaza is a dynamic preacher, visionary leader, and Senior Pastor of Kingdom Life Ministries International, which she founded in 2013 in Durban. Born again in 1996, she has since devoted her life to expanding the Kingdom of God and inspiring people to live purpose-driven lives.
+          She currently serves as the Provincial Chaplain of KwaZulu-Natal in the Office of the Honourable Premier Thami Ntuli, providing spiritual guidance, counsel, and leadership within the province’s highest governmental sphere.
+          Apostle Lungi M is known for her passion for instilling hope in the hopeless, building confidence in those facing trials in life, and equipping leaders with the tools to reach their full potential. Her ministry extends beyond the pulpit, working with churches, businesses, and government departments to strengthen leadership, teamwork, and community impact.
+          She is the author of Facing My Fears and Leadership Without Gender Limits, and a former TV and radio presenter, with a strong media presence. Through powerful programmes such as “Women, Shake Off Your Dust,” “Isibaya Samadoda,” and various youth and community development initiatives, she addresses pressing social issues while offering spiritual guidance and practical empowerment.
+          Currently pursuing an LLB degree through UNISA and holding a Bachelor’s in Theology from Vision International University, Apostle Lungi M blends spiritual wisdom with academic insight. Her voice resonates in conferences, workshops, and community platforms, where she teaches people to face life’s challenges with “unwavering, stubborn faith” and to live effectively on earth without letting trials dim their light.
         </p>
         <p class="fs-5">
           Her work spans church leadership, chaplaincy, authorship, and coaching. She has impacted countless lives,
