--- a/bookings.html
+++ b/bookings.html
@@ -16,7 +16,7 @@
 
   <style>
     :root {
-      --gold: #D4AF37;
+      --purple: #6A0DAD;
       --light-bg: #f8f9fa;
       --white: #fff;
       --text-gray: #333;
@@ -42,29 +42,29 @@
     }
     .navbar-brand {
       font-weight: 700;
-      color: var(--gold) !important;
+      color: var(--purple) !important;
     }
     .nav-link { color: black !important; }
     .section-title {
       text-align: center;
       margin: 70px 0 30px;
-      color: var(--gold);
+      color: var(--purple);
     }
     .btn {
       border-radius: 30px;
       padding: 10px 25px;
     }
     .btn-primary {
-      background-color: var(--gold);
+      background-color: var(--purple);
       border: none;
       color: #000;
     }
     .btn-outline-secondary {
-      border: 1px solid var(--gold);
+      border: 1px solid var(--purple);
       color: var(--gold);
     }
     .btn-outline-secondary:hover {
-      background-color: var(--gold);
+      background-color: var(--purple);
       color: #000;
     }
     footer {
@@ -174,7 +174,7 @@
           </div>
           <div class="d-flex justify-content-center gap-3">
             <button type="submit" class="btn btn-primary">Send Booking Request</button>
-            <a href="https://wa.me/27795874974?text=Hello%20Pastor%20Lungi%20M,%20I%20would%20like%20to%20book%20a%20session." target="_blank" class="btn btn-outline-secondary">WhatsApp Us</a>
+            <a href="https://wa.me/2795874974?text=Hello%20Pastor%20Lungi%20M,%20I%20would%20like%20to%20book%20a%20session." target="_blank" class="btn btn-outline-secondary">WhatsApp Us</a>
           </div>
         </form>
       </div>
