--- a/books.html
+++ b/books.html
@@ -16,7 +16,7 @@
 
   <style>
   :root {
-    --gold: #D4AF37;
+    --purple: #6A0DAD;
     --light-bg: #f8f9fa;
     --white: #fff;
     --text-gray: #333;
@@ -48,23 +48,23 @@
   .section-title {
     text-align: center;
     margin: 70px 0 30px;
-    color: var(--gold);
+    color: var(--purple);
   }
   .btn {
     border-radius: 30px;
     padding: 10px 25px;
   }
   .btn-primary {
-    background-color: var(--gold);
+    background-color: var(--purple);
     border: none;
     color: #000;
   }
   .btn-outline-secondary {
-    border: 1px solid var(--gold);
+    border: 1px solid var(--purple);
     color: var(--gold);
   }
   .btn-outline-secondary:hover {
-    background-color: var(--gold);
+    background-color: var(--purple);
     color: #000;
   }
   footer {
