--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,10 +16,10 @@
 
   <style>
   :root {
-    --gold: #D4AF37;
+    --purple: #6A0DAD;
     --light-bg: #f8f9fa;
     --white: #fff;
-    --text-gray: #333;
+    --purple: #6A0DAD;
     --divider: #ddd;
   }
   body {
@@ -74,28 +73,28 @@
   }
   .hero .content h1 {
     font-size: 3rem;
-    color: var(--gold);
+    color: var(--white);
   }
   .section-title {
     text-align: center;
     margin: 70px 0 30px;
-    color: var(--gold);
+    color: var(--purple);
   }
   .btn {
     border-radius: 30px;
     padding: 10px 25px;
   }
   .btn-primary {
-    background-color: var(--gold);
+    background-color: var(--purple);
     border: none;
     color: #000;
   }
   .btn-outline-secondary {
-    border: 1px solid var(--gold);
+    border: 1px solid var(--purple);
     color: var(--gold);
   }
   .btn-outline-secondary:hover {
-    background-color: var(--gold);
+    background-color: var(--purple);
     color: #000;
   }
   .card-ministry {
@@ -170,9 +169,9 @@
   <section class="container">
     <h2 class="section-title">About Pastor Lungi M</h2>
     <p class="text-center fs-5">
-      Pastor Lungi M is a servant of God, author, chaplain, and commissioner of oaths. She is the visionary founder of 
+      Apostle Lungi M is a servant of God, author, chaplain, and commissioner of oaths. She is the visionary founder of 
       <strong>Kingdom Life Ministries International</strong> based in Durban, KwaZulu-Natal. With a calling to transform lives, 
-      she empowers believers to walk in faith, lead with integrity, and impact their communities.
+      she empowers believers to... <strong>Read more</strong>
     </p>
     <div class="text-center">
       <a href="about.html" class="btn btn-primary">Discover Her Journey →</a>
@@ -348,4 +347,3 @@
   </script>
 </body>
 </html>
-```
