--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
   }
   .navbar-brand {
     font-weight: 700;
-    color: var(--gold) !important;
+    color: var(--purple) !important;
   }
-  .nav-link { color: black !important; }
+  .nav-link { color: var(--purple) !important; }
   .hero {
     position: relative;
     height: 100vh;
@@ -131,7 +131,7 @@
     <div class="container">
       <a class="navbar-brand" href="#">
         <img src="media/logo.jpg" alt="Logo" width="60" height="60" class="me-2 rounded-circle" />
-        Kingdom Life Ministries
+        Kingdom Life Ministries International
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
@@ -158,7 +158,7 @@
   <div class="content">
     <h1>Raising Kingdom Leaders. Transforming Nations.</h1>
     <p class="lead">
-      Thee Apostle | Author | Coach | Chaplain | Marriage officer | Speaker
+      Thee Apostle | Author | Coach | KZN Provincial Chaplain | Marriage officer | Speaker
     </p>
   </div>
 </section>
