--- a/bookings.html
+++ b/bookings.html
@@ -87,7 +87,7 @@
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <img src="media/logo.jpg" alt="Logo" width="60" height="60" class="me-2 rounded-circle" />
-        Kingdom Life Ministries
+        Kingdom Life Ministries International
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
@@ -162,7 +162,7 @@
     <p class="fs-5 text-center">Fill out the form below or use WhatsApp to reach us instantly.</p>
     <div class="row justify-content-center">
       <div class="col-md-6">
-        <form action="mailto:Lungitheapostle@gmail.com" method="POST" enctype="text/plain">
+        <form action="mailto:kingdomlifeministriesklmi@gmail.com" method="POST" enctype="text/plain">
           <div class="mb-3">
             <input type="text" class="form-control" name="Name" placeholder="Your Name" required />
           </div>
@@ -173,7 +173,7 @@
             <textarea class="form-control" name="Message" placeholder="Your Message" rows="5" required></textarea>
           </div>
           <div class="d-flex justify-content-center gap-3">
-            <button type="submit" class="btn btn-primary">Send Booking Request</button>
+            <button type="submit" class="btn btn-primary">Email Us</button>
             <a href="https://wa.me/2795874974?text=Hello%20Pastor%20Lungi%20M,%20I%20would%20like%20to%20book%20a%20session." target="_blank" class="btn btn-outline-secondary">WhatsApp Us</a>
           </div>
         </form>
