--- a/books.html
+++ b/books.html
@@ -94,7 +94,7 @@
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <img src="media/logo.jpg" alt="Logo" width="60" height="60" class="me-2 rounded-circle" />
-        Kingdom Life Ministries
+        Kingdom Life Ministries International
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
