--- a/bookings.html
+++ b/bookings.html
@@ -87,7 +87,7 @@
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <img src="media/logo.jpg" alt="Logo" width="60" height="60" class="me-2 rounded-circle" />
-        Kingdom Life Ministries International
+        Kingdom Life Ministries Int.
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
