--- a/about.html
+++ b/about.html
@@ -111,9 +111,9 @@
       width: 4px;
       background-color: var(--purple);
       height: 100%;
+      position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      position: absolute;
       border-radius: 2px;
     }
     .timeline-item {
@@ -156,18 +156,26 @@
     .text-purple {
       color: var(--purple);
     }
+
+    /* ✅ Mobile Fix for Timeline */
     @media (max-width: 767px) {
-      .timeline::before {
-        left: 8px;
+      .timeline-line {
+        left: 10px;
+        transform: none;
       }
       .timeline-item {
         width: 100%;
-        text-align: left;
-        padding-left: 40px;
+        padding-left: 50px;
+        padding-right: 20px;
+        text-align: left !important;
       }
-      .timeline-item.left::before,
-      .timeline-item.right::before {
-        left: 10px;
+      .timeline-item::before {
+        left: 0;
+        right: auto;
+      }
+      .timeline-item.left,
+      .timeline-item.right {
+        left: 0;
       }
     }
   </style>
@@ -178,7 +186,7 @@
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <img src="media/logo.jpg" alt="Logo" width="60" height="60" class="me-2 rounded-circle" />
-        Kingdom Life Ministries International
+        Kingdom Life Ministries Int.
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
@@ -232,7 +240,7 @@
       <h3 class="section-title">Academic Qualifications</h3>
 
       <div class="timeline position-relative mt-5">
-        <div class="timeline-line position-absolute top-0 start-50 translate-middle-x"></div>
+        <div class="timeline-line"></div>
 
         <div class="timeline-item left">
           <div class="timeline-content">
@@ -261,7 +269,7 @@
     </div>
   </section>
 
-<hr class="divider">
+  <hr class="divider">
 
   <!-- KLMI Details Section -->
   <section class="container my-5">
@@ -317,29 +325,29 @@
 
   <hr class="divider">
 
-<!-- Watch Sermons -->
-<section class="container my-5">
-  <h2 class="section-title text-center">Watch Sermons</h2>
-  <p class="text-center fs-5">
-    Catch up on the latest Sunday service and be encouraged by the Word. Don’t forget to 
-    <strong>subscribe</strong> to Pastor Lungi M’s YouTube channel for more powerful teachings.
-  </p>
-  <div class="text-center">
-    <a href="https://youtu.be/W_6usOnTnRQ?si=JIw84pSlY-sWWtFK" target="_blank">
-      <img src="https://img.youtube.com/vi/W_6usOnTnRQ/maxresdefault.jpg" 
-           alt="Sunday Service Sermon" 
-           class="img-fluid rounded shadow" 
-           style="max-width: 700px;">
-    </a>
-  </div>
-  <div class="text-center mt-3">
-    <a href="https://youtube.com/@pastorlungim3407?si=GWni6dJXaEJRJV8e" 
-       class="btn btn-danger btn-lg" 
-       target="_blank">
-       <i class="bi bi-youtube"></i> Subscribe on YouTube
-    </a>
-  </div>
-</section>
+  <!-- Watch Sermons -->
+  <section class="container my-5">
+    <h2 class="section-title text-center">Watch Sermons</h2>
+    <p class="text-center fs-5">
+      Catch up on the latest Sunday service and be encouraged by the Word. Don’t forget to 
+      <strong>subscribe</strong> to Pastor Lungi M’s YouTube channel for more powerful teachings.
+    </p>
+    <div class="text-center">
+      <a href="https://youtu.be/W_6usOnTnRQ?si=JIw84pSlY-sWWtFK" target="_blank">
+        <img src="https://img.youtube.com/vi/W_6usOnTnRQ/maxresdefault.jpg" 
+             alt="Sunday Service Sermon" 
+             class="img-fluid rounded shadow" 
+             style="max-width: 700px;">
+      </a>
+    </div>
+    <div class="text-center mt-3">
+      <a href="https://youtube.com/@pastorlungim3407?si=GWni6dJXaEJRJV8e" 
+         class="btn btn-danger btn-lg" 
+         target="_blank">
+         <i class="bi bi-youtube"></i> Subscribe on YouTube
+      </a>
+    </div>
+  </section>
 
   <hr class="divider">
 
