--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
       <div class="card card-ministry">
         <img src="media/chaplain.jpg" class="card-img-top" alt="Chaplaincy">
         <div class="card-body">
-          <h5 class="card-title">Chaplaincy</h5>
-          <p class="card-text">Serving communities, police, and institutions as a chaplain and counselor.</p>
+          <h5 class="card-title">KZN Provincial Chaplain</h5>
+          <p class="card-text">Establishing Faith Leaders Structures across the KZN Province an co-ordinating Faith leaders to work with KZN government to inspire new hope. Serving faith based communities in a fight against crime, GBV, and social ills.</p>
         </div>
       </div>
     </div>
@@ -221,7 +221,7 @@
       <div class="card card-ministry">
         <img src="media/coach.jpg" class="card-img-top" alt="Author">
         <div class="card-body">
-          <h5 class="card-title">Coach & Speaker</h5>
+          <h5 class="card-title">Public Speaker & Author</h5>
           <p class="card-text">Writing and teaching to uplift and empower believers worldwide.</p>
         </div>
       </div>
