--- a/about.html
+++ b/about.html
@@ -222,7 +222,7 @@
       </div>
       <div class="col-md-6">
         <p class="fs-5">
-          Apostle Lungi M. Magwaza is a dynamic preacher, visionary leader, and Senior Pastor of Kingdom Life Ministries International, which she founded in 2013 in Durban. Born again in 1996, she has since devoted her life to expanding the Kingdom of God and inspiring people to live purpose-driven lives.
+          Apostle Lungi M. Magwaza is a dynamic preacher, visionary leader, and Senior Pastor of Kingdom Life Ministries International, which she founded in 2013 in Durban, No 100 Stalwart Simelane, KZN; and 31 BUNYAN STREET, BENONI, JHB. Born again in 1996, she has since devoted her life to expanding the Kingdom of God and inspiring people to live purpose-driven lives.
           She currently serves as the Provincial Chaplain of KwaZulu-Natal in the Office of the Honourable Premier Thami Ntuli, providing spiritual guidance, counsel, and leadership within the province’s highest governmental sphere.
           Apostle Lungi M is known for her passion for instilling hope in the hopeless, building confidence in those facing trials in life, and equipping leaders with the tools to reach their full potential. Her ministry extends beyond the pulpit, working with churches, businesses, and government departments to strengthen leadership, teamwork, and community impact.
           She is the author of Facing My Fears and Leadership Without Gender Limits, and a former TV and radio presenter, with a strong media presence. Through powerful programmes such as “Women, Shake Off Your Dust,” “Isibaya Samadoda,” and various youth and community development initiatives, she addresses pressing social issues while offering spiritual guidance and practical empowerment.
@@ -244,9 +244,9 @@
 
         <div class="timeline-item left">
           <div class="timeline-content">
-            <h5 class="fw-bold text-purple">University of South Africa (UNISA)</h5>
-            <p class="mb-1"><strong>Qualification:</strong> LLB Degree (Bachelor of Laws)</p>
-            <p class="text-muted">Year: Currently Studying</p>
+            <h5 class="fw-bold text-purple"> Mangosuthu University of Technology</h5>
+            <p class="mb-1"><strong>Qualification:</strong> Diploma in Office Administration</p>
+            <p class="text-muted"> Studying Year: 2003</p>
           </div>
         </div>
 
@@ -260,9 +260,9 @@
 
         <div class="timeline-item left">
           <div class="timeline-content">
-            <h5 class="fw-bold text-purple">Mangosuthu University of Technology</h5>
-            <p class="mb-1"><strong>Qualification:</strong> Diploma in Office Administration</p>
-            <p class="text-muted">Year: 2003</p>
+            <h5 class="fw-bold text-purple">University of South Africa (UNISA)</h5>
+            <p class="mb-1"><strong>Qualification:</strong> LLB Degree (Bachelor of Laws)</p>
+            <p class="text-muted">Year: Currently</p>
           </div>
         </div>
       </div>
