--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
     <h2 class="section-title">About Pastor Lungi M</h2>
     <p class="text-center fs-5">
       Apostle Lungi M is a servant of God, author, chaplain, and commissioner of oaths. She is the visionary founder of 
-      <strong>Kingdom Life Ministries International</strong> based in Durban, KwaZulu-Natal. With a calling to transform lives, 
-      she empowers believers to... <strong>Read more</strong>
+      <strong>Kingdom Life Ministries International</strong> based in Durban, No 100 Stalwart Simelane, KZN; and 31 BUNYAN STREET, Benoni, JHB. 
+      Born again in 1996, she has since devoted her life to... <strong>Read more</strong>
     </p>
     <div class="text-center">
       <a href="about.html" class="btn btn-primary">Discover Her Journey →</a>
@@ -261,6 +261,10 @@
 <!-- Johannesburg Branch -->
 <section class="container my-5">
   <h2 class="section-title text-center">Johannesburg Branch</h2>
+   <div class="row align-items-center">
+    <div class="col-md-6">
+      <img src="media/church 2.jpg" alt="Church Building" class="img-fluid rounded" />
+    </div>
   <div class="row">
     <div class="col-md-12">
       <ul class="list-unstyled fs-5">
