--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <h2 class="section-title">About Pastor Lungi M</h2>
     <p class="text-center fs-5">
       Apostle Lungi M is a servant of God, author, chaplain, and commissioner of oaths. She is the visionary founder of 
-      <strong>Kingdom Life Ministries International</strong> based in Durban, No 100 Stalwart Simelane, KZN; and 31 BUNYAN STREET, Benoni, JHB. 
+      <strong>Kingdom Life Ministries International</strong> based in Durban, No 100 Stalwart Simelane, KZN; and 31 Bunyan Street, Benoni, JHB. 
       Born again in 1996, she has since devoted her life to... <strong>Read more</strong>
     </p>
     <div class="text-center">
