--- a/about.html
+++ b/about.html
@@ -213,27 +213,30 @@
 
   <hr class="divider">
 
-  <!-- Biography Section -->
-  <section class="container my-5">
-    <h2 class="section-title">Biography</h2>
-    <div class="row align-items-center">
-      <div class="col-md-6">
-        <img src="media/about 1.jpg" alt="Pastor Lungi M Portrait" class="img-fluid rounded mb-3">
-      </div>
-      <div class="col-md-6">
-        <p class="fs-5">
-          Apostle Lungi M. Magwaza is a dynamic preacher, visionary leader, and Senior Pastor of Kingdom Life Ministries International, which she founded in 2013 in Durban, No 100 Stalwart Simelane, KZN; and 31 BUNYAN STREET, BENONI, JHB. Born again in 1996, she has since devoted her life to expanding the Kingdom of God and inspiring people to live purpose-driven lives.
-          She currently serves as the Provincial Chaplain of KwaZulu-Natal in the Office of the Honourable Premier Thami Ntuli, providing spiritual guidance, counsel, and leadership within the province’s highest governmental sphere.
-          Apostle Lungi M is known for her passion for instilling hope in the hopeless, building confidence in those facing trials in life, and equipping leaders with the tools to reach their full potential. Her ministry extends beyond the pulpit, working with churches, businesses, and government departments to strengthen leadership, teamwork, and community impact.
-          She is the author of Facing My Fears and Leadership Without Gender Limits, and a former TV and radio presenter, with a strong media presence. Through powerful programmes such as “Women, Shake Off Your Dust,” “Isibaya Samadoda,” and various youth and community development initiatives, she addresses pressing social issues while offering spiritual guidance and practical empowerment.
-          Currently pursuing an LLB degree through UNISA and holding a Bachelor’s in Theology from Vision International University, Apostle Lungi M blends spiritual wisdom with academic insight. Her voice resonates in conferences, workshops, and community platforms, where she teaches people to face life’s challenges with “unwavering, stubborn faith” and to live effectively on earth without letting trials dim their light.
-        </p>
-        <p class="fs-5">
-          Her work spans church leadership, chaplaincy, authorship, and coaching. She has impacted countless lives,
-          guiding communities in faith, integrity, and excellence.
-        </p>
-      </div>
+<!-- Biography Section -->
+<section class="container my-5">
+  <h2 class="section-title">Biography</h2>
+  <div class="row align-items-center">
+    <div class="col-md-6">
+      <img src="media/about 1.jpg" alt="Pastor Lungi M Portrait" class="img-fluid rounded mb-3">
     </div>
+    <div class="col-md-6">
+      <p class="fs-5">
+        Apostle Lungi M. Magwaza is a dynamic preacher, visionary leader, and Senior Pastor of Kingdom Life Ministries International, which she founded in 2013 in Durban, No 100 Stalwart Simelane, KZN; and 31 BUNYAN STREET, BENONI, JHB. Born again in 1996, she has since devoted her life to expanding the Kingdom of God and inspiring people to live purpose-driven lives.
+        She currently serves as the Provincial Chaplain of KwaZulu-Natal in the Office of the Honourable Premier Thami Ntuli, providing spiritual guidance, counsel, and leadership within the province’s highest governmental sphere.
+        Apostle Lungi M is known for her passion for instilling hope in the hopeless, building confidence in those facing trials in life, and equipping leaders with the tools to reach their full potential. Her ministry extends beyond the pulpit, working with churches, businesses, and government departments to strengthen leadership, teamwork, and community impact.
+        She is the author of <em>Facing My Fears</em> and <em>Leadership Without Gender Limits</em>, and a former TV and radio presenter, with a strong media presence. Through powerful programmes such as “Women, Shake Off Your Dust,” “Isibaya Samadoda,” and various youth and community development initiatives, she addresses pressing social issues while offering spiritual guidance and practical empowerment.
+        Academically, Apostle Lungi M is currently pursuing an LLB Degree (Bachelor of Laws) through the University of South Africa (UNISA). She holds a Bachelor’s Degree in Theology obtained in 2018 from Vision International University, and a Diploma in Office Administration earned in 2003 from Mangosuthu University of Technology. 
+        Combining spiritual wisdom with academic excellence, she continues to bridge faith, education, and leadership in her mission to empower individuals and communities. Her voice resonates in conferences, workshops, and community platforms, where she teaches people to face life’s challenges with “unwavering, stubborn faith” and to live effectively on earth without letting trials dim their light.
+      </p>
+      <p class="fs-5">
+        Her work spans church leadership, chaplaincy, authorship, and coaching. She has impacted countless lives,
+        guiding communities in faith, integrity, and excellence.
+      </p>
+    </div>
+  </div>
+</section>
+
 
     <!-- Education Timeline -->
     <div class="mt-5">
