--- a/about.html
+++ b/about.html
@@ -226,7 +226,7 @@
         She currently serves as the Provincial Chaplain of KwaZulu-Natal in the Office of the Honourable Premier Thami Ntuli, providing spiritual guidance, counsel, and leadership within the province’s highest governmental sphere.
         Apostle Lungi M is known for her passion for instilling hope in the hopeless, building confidence in those facing trials in life, and equipping leaders with the tools to reach their full potential. Her ministry extends beyond the pulpit, working with churches, businesses, and government departments to strengthen leadership, teamwork, and community impact.
         She is the author of <em>Facing My Fears</em> and <em>Leadership Without Gender Limits</em>, and a former TV and radio presenter, with a strong media presence. Through powerful programmes such as “Women, Shake Off Your Dust,” “Isibaya Samadoda,” and various youth and community development initiatives, she addresses pressing social issues while offering spiritual guidance and practical empowerment.
-        Academically, Apostle Lungi M is currently pursuing an LLB Degree (Bachelor of Laws) through the University of South Africa (UNISA). She holds a Bachelor’s Degree in Theology obtained in 2018 from Vision International University, and a Diploma in Office Administration earned in 2003 from Mangosuthu University of Technology. 
+        Academically, the apostle holds a Bachelor’s Degree in Theology obtained in 2018 from Vision International University, and a Diploma in Office Administration earned in 2003 from Mangosuthu University of Technology. Apostle Lungi M is currently pursuing an LLB Degree (Bachelor of Laws) through the University of South Africa (UNISA).
         Combining spiritual wisdom with academic excellence, she continues to bridge faith, education, and leadership in her mission to empower individuals and communities. Her voice resonates in conferences, workshops, and community platforms, where she teaches people to face life’s challenges with “unwavering, stubborn faith” and to live effectively on earth without letting trials dim their light.
       </p>
       <p class="fs-5">
@@ -336,8 +336,8 @@
       <strong>subscribe</strong> to Pastor Lungi M’s YouTube channel for more powerful teachings.
     </p>
     <div class="text-center">
-      <a href="https://youtu.be/W_6usOnTnRQ?si=JIw84pSlY-sWWtFK" target="_blank">
-        <img src="https://img.youtube.com/vi/W_6usOnTnRQ/maxresdefault.jpg" 
+      <a href="https://youtu.be/NlQBeGlFfXs?si=S63EbQSs5vePhsla" target="_blank">
+        <img src="https://img.youtube.com/vi/NlQBeGlFfXs/maxresdefault.jpg" 
              alt="Sunday Service Sermon" 
              class="img-fluid rounded shadow" 
              style="max-width: 700px;">
