--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <section class="container">
     <h2 class="section-title">About Pastor Lungi M</h2>
     <p class="text-center fs-5">
-      Apostle Lungi M is a servant of God, author, chaplain, and commissioner of oaths. She is the visionary founder of 
+      Apostle Lungi M is a servant of God, author, the KZN provincial chaplain, and commissioner of oaths. She is the visionary founder of 
       <strong>Kingdom Life Ministries International</strong> based in Durban, No 100 Stalwart Simelane, KZN; and 31 Bunyan Street, Benoni, JHB. 
       Born again in 1996, she has since devoted her life to... <strong>Read more</strong>
     </p>
