--- a/about.html
+++ b/about.html
@@ -336,8 +336,8 @@
       <strong>subscribe</strong> to Pastor Lungi M’s YouTube channel for more powerful teachings.
     </p>
     <div class="text-center">
-      <a href="https://youtu.be/NlQBeGlFfXs?si=S63EbQSs5vePhsla" target="_blank">
-        <img src="https://img.youtube.com/vi/NlQBeGlFfXs/maxresdefault.jpg" 
+      <a href="https://youtu.be/r0-6FaYqMB8?si=YYEyCUE6uE1HXJkO" target="_blank">
+        <img src="https://img.youtube.com/vi/r0-6FaYqMB8/maxresdefault.jpg" 
              alt="Sunday Service Sermon" 
              class="img-fluid rounded shadow" 
              style="max-width: 700px;">
