--- a/about.html
+++ b/about.html
@@ -336,8 +336,8 @@
       <strong>subscribe</strong> to Pastor Lungi M’s YouTube channel for more powerful teachings.
     </p>
     <div class="text-center">
-      <a href="https://youtu.be/nSPrl9psIjI?si=_OYfd-TcfDtpYyCh" target="_blank">
-        <img src="https://img.youtube.com/vi/nSPrl9psIjI/maxresdefault.jpg" 
+      <a href="https://youtu.be/zuipN96oBCs?si=eDNNjEK1pGZnQREF" target="_blank">
+        <img src="https://img.youtube.com/vi/zuipN96oBCs/maxresdefault.jpg" 
              alt="Sunday Service Sermon" 
              class="img-fluid rounded shadow" 
              style="max-width: 700px;">
