--- a/about.html
+++ b/about.html
@@ -336,8 +336,8 @@
       <strong>subscribe</strong> to Pastor Lungi M’s YouTube channel for more powerful teachings.
     </p>
     <div class="text-center">
-      <a href="https://youtu.be/nFQWuCCykUA?si=CmaEWnxtdBb0SrEB" target="_blank">
-        <img src="https://img.youtube.com/vi/nFQWuCCykUA/maxresdefault.jpg" 
+      <a href="https://youtu.be/R3hnOJlnXOc?si=TOMkRQ5_VYn5motm" target="_blank">
+        <img src="https://img.youtube.com/vi/R3hnOJlnXOc/maxresdefault.jpg" 
              alt="Sunday Service Sermon" 
              class="img-fluid rounded shadow" 
              style="max-width: 700px;">
