--- a/about.html
+++ b/about.html
@@ -336,8 +336,8 @@
       <strong>subscribe</strong> to Pastor Lungi M’s YouTube channel for more powerful teachings.
     </p>
     <div class="text-center">
-      <a href="https://youtu.be/VWrqsYaZPD8?si=gufXUvjxouJYd3vS" target="_blank">
-        <img src="https://img.youtube.com/vi/VWrqsYaZPD8/maxresdefault.jpg" 
+      <a href="https://youtu.be/8LRpQvPmQAY?si=FOSQSSzk-QTvmrbY" target="_blank">
+        <img src="https://img.youtube.com/vi/8LRpQvPmQAY/maxresdefault.jpg" 
              alt="Sunday Service Sermon" 
              class="img-fluid rounded shadow" 
              style="max-width: 700px;">
