--- a/about.html
+++ b/about.html
@@ -336,8 +336,8 @@
       <strong>subscribe</strong> to Pastor Lungi M’s YouTube channel for more powerful teachings.
     </p>
     <div class="text-center">
-      <a href="https://youtu.be/Y-cUXQfzM48?si=HnNkvyUHHHlyowFt" target="_blank">
-        <img src="https://img.youtube.com/vi/Y-cUXQfzM48/maxresdefault.jpg" 
+      <a href="https://youtu.be/ZMFaDvi8Uss?si=jwVe6kyEnjXAEqxC" target="_blank">
+        <img src="https://img.youtube.com/vi/ZMFaDvi8Uss/maxresdefault.jpg" 
              alt="Sunday Service Sermon" 
              class="img-fluid rounded shadow" 
              style="max-width: 700px;">
